--- a/cups-1.5.3/debian/changelog
+++ b/cups-1.5.3/debian/changelog
@@ -1,3 +1,12 @@
+cups (1.5.3-5+deb7u6) wheezy-security; urgency=high
+
+  * Import 1.5 upstream fix for CERT VU#810572: Privilege escalation through
+    dynamic linker and isolated vulnerabilities: STR: #4609, VU#810572
+    - CVE-2015-1158 - Improper Update of Reference Count
+    - CVE-2015-1159 - Cross-Site Scripting
+
+ -- Didier Raboud <odyx@debian.org>  Tue, 09 Jun 2015 09:54:07 +0200
+
 cups (1.5.3-5+deb7u5) wheezy-security; urgency=high
 
   * Backport upstream patch to fix cupsRasterReadPixels buffer overflow with
